--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WorkTracker - WebGigs</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="WorkTracker - Time Tracking System" />
+    <meta name="author" content="WebGigs" />
 
-    <meta property="og:title" content="project-pay-pilot" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="WorkTracker - WebGigs" />
+    <meta property="og:description" content="WorkTracker - Time Tracking System" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/opengraph-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@workvault_in" />
+    <meta name="twitter:image" content="/opengraph-image.png" />
   </head>
 
   <body>
